Fix Get Started button visibility based on the auth status

--- a/music/static/css/home.css
+++ b/music/static/css/home.css
@@ -28,7 +28,7 @@
 }
 
 .home__btn {
-    min-width: 10rem;
+    min-width: 12.5rem;
     text-align: center;
     font-size: 1.45rem !important;
 }
